# shogi-quest-image-kif-converter

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start_kif_ui.cmd
.github/workflows/: ci.yml
assets/android_templates/: app_piece_templates.json  hand_digit_templates.json  hand_layouts.json  hand_piece_templates.json  known_position_samples.json
data/samples/: piece_style_manifest.csv
docs/: HTML_UI_USAGE_JA.md  MIGRATION_INVENTORY.md  PUBLICATION_NOTES.md  SHOGIVISION_REFERENCE.md  index.html  robots.txt  sitemap.xml
docs/ai_context/: DEVELOPMENT_AND_QA.md  (+2 more)
examples/: README.md
tests/: test_cli.py  test_export.py  test_kif_ui.py
tools/: README.md  audit_piece_labels.py  audit_position_label_inventory.py  compare_recognition_runs.py  detect_board_grid.py  detect_hand_areas.py  evaluate_piece_recognition.py  export_android_hand_assets.py  export_android_piece_templates.py  export_known_position_samples.py  learned_piece_recognizer.py  make_hand_items_review.py  make_image_analysis_html.py  make_piece_accuracy_review.py  position_label_utils.py  recognize_board_pieces.py  recognize_hand_pieces.py  requirements.txt  run_analysis_by_app_glyph.py  run_android_device_eval.py  run_piece_inference.py  shogivision_offline_probe.py  test_cell_crop_classifier_probe.py  test_chamfer_offline_probe.py  test_evaluate_piece_recognition.py  test_export_android_piece_templates.py  test_mask_variant_cell_audit.py  test_mask_variant_offline_probe.py  test_multitemplate_consensus_probe.py  train_piece_model.py  validate_position_labels.py
(+189 files in other folders)
